simplify tests & imports